# clean-architecture-with-rust

./: Cargo.toml  README.md  justfile  shell.nix
.github/workflows/: continuous_integration.yaml
adapter/: Cargo.toml
adapter/json-boundary/: Cargo.toml
adapter/json-boundary/src/: domain.rs  lib.rs
adapter/json-boundary/src/usecase/area_of_life/: create.rs  delete.rs  mod.rs  read_all.rs  update.rs
adapter/json-boundary/src/usecase/thought/: create.rs  delete.rs  find_by_id.rs  mod.rs  read_all.rs  update.rs
adapter/src/: db.rs  lib.rs
adapter/src/controller/: area_of_life.rs  item.rs  thought.rs
adapter/src/controller/item/: create.rs  find_by_id.rs
adapter/src/controller/thought/: create.rs  delete.rs  find_by_id.rs  mod.rs  read_all.rs
adapter/src/id/: item.rs  mod.rs  thought.rs
adapter/src/model/: mod.rs
adapter/src/model/app/: area_of_life.rs  mod.rs  thought.rs
adapter/src/model/view/: json.rs
adapter/src/model/view/json/: mod.rs  thought.rs
adapter/src/presenter/: cli.rs  http_json_api.rs  item.rs  json.rs  mod.rs
adapter/src/presenter/http_json_api/: mod.rs  to_json.rs
adapter/src/presenter/item/: create.rs  find_by_id.rs
application/: Cargo.toml
application/src/: lib.rs
application/src/gateway/repository/: area_of_life.rs  item.rs  thought.rs
application/src/interactor/: item.rs
application/src/usecase/area_of_life/: check_existence.rs  create.rs  delete.rs  mod.rs  read_all.rs  update.rs  validate.rs
application/src/usecase/item/: create.rs  find_by_id.rs
application/src/usecase/thought/: create.rs  delete.rs  find_by_id.rs  mod.rs  read_all.rs  update.rs  validate.rs
crates/adapter/: Cargo.toml
crates/adapter/src/: api.rs  lib.rs
crates/adapter/src/controller/: area_of_life.rs  mod.rs  thought.rs
crates/adapter/src/model/app/: area_of_life.rs  thought.rs
crates/adapter/src/model/view/: json.rs
crates/adapter/src/presenter/: cli.rs  mod.rs
crates/adapter/src/presenter/http_json_api/: mod.rs  to_json.rs
crates/application/: Cargo.toml
crates/application/src/: identifier.rs  lib.rs
crates/application/src/gateway/repository/: area_of_life.rs  thought.rs
crates/application/src/usecase/area_of_life/: check_existence.rs  create.rs  delete.rs  read_all.rs  update.rs  validate.rs
crates/application/src/usecase/thought/: create.rs  delete.rs  find_by_id.rs  read_all.rs  (+2 more)
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: in_memory.rs  lib.rs
crates/db/src/json_file/: area_of_life.rs  mod.rs  thought.rs
crates/desktop/: Cargo.toml
crates/desktop-egui/: Cargo.toml
crates/desktop-egui/src/: lib.rs  ui.rs
crates/desktop/src/: actions.rs  lib.rs
crates/domain/: Cargo.toml
crates/domain/src/entity/: area_of_life.rs  thought.rs
crates/domain/src/value_object/: id.rs  name.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: cli.rs  desktop.rs  lib.rs  storage.rs  web.rs
crates/json-boundary/: Cargo.toml
crates/json-boundary/src/: lib.rs  status_code.rs
crates/json-boundary/src/usecase/thought/: create.rs
crates/web-app/: Cargo.toml  index.html
crates/web-app-api/: Cargo.toml
crates/web-app-api/src/: http.rs  lib.rs
crates/web-app-kern/: Cargo.toml
crates/web-app-kern/src/: lib.rs
crates/web-app-kern/src/usecase/: area_of_life.rs  mod.rs  thought.rs
crates/web-app-seed/: Cargo.toml  index.html
crates/web-app-seed/src/: lib.rs  main.rs
crates/web-app-seed/src/api/: http.rs
crates/web-app-seed/src/usecase/: area_of_life.rs  mod.rs
crates/web-app-seed/src/view/: mod.rs  new_area_of_life_dialog.rs
crates/web-app-seed/src/view/page/: home.rs  mod.rs
crates/web-app/src/: domain.rs  main.rs
crates/web-app/src/view/: new_area_of_life_dialog.rs
crates/web-server/: Cargo.toml
crates/web-server-warp/: Cargo.toml
crates/web-server-warp/src/: lib.rs  route.rs  tests.rs  webapp.rs
crates/web-server-warp/src/handler/: error.rs  mod.rs
crates/web-server-warp/src/handler/area_of_life/: create.rs  delete.rs  read_all.rs  update.rs
crates/web-server-warp/src/handler/thought/: create.rs  delete.rs  find_by_id.rs  read_all.rs
crates/web-server/src/: route.rs  tests.rs  webapp.rs
crates/web-server/src/handler/: error.rs  mod.rs
crates/webapp/: Cargo.toml  main.sass
domain/: Cargo.toml
domain/src/: lib.rs  thought.rs
domain/src/entity/: area_of_life.rs  mod.rs  thought.rs
domain/src/entity/area_of_life/: id.rs  mod.rs  name.rs
domain/src/entity/thought/: id.rs  mod.rs  title.rs
domain/src/thought/: title.rs
domain/src/usecase/item/: create.rs
domain/src/validate/: item.rs  thought.rs
domain/src/value_object/: mod.rs
entity/: Cargo.toml
entity/src/: item.rs  thought.rs
infrastructure/: Cargo.toml
infrastructure/db/: Cargo.toml
infrastructure/db/src/: in_memory.rs
infrastructure/db/src/json_file/: area_of_life.rs  mod.rs  models.rs  thought.rs
infrastructure/src/: cli.rs  lib.rs  logger.rs  storage.rs  web.rs
infrastructure/src/db/: in_memory.rs  json_file.rs
infrastructure/src/db/json_file/: area_of_life.rs  mod.rs  models.rs  thought.rs
infrastructure/src/web/: mod.rs  route.rs  tests.rs  webapp.rs
infrastructure/src/web/handler/: error.rs  mod.rs
infrastructure/src/web/handler/area_of_life/: create.rs  delete.rs  mod.rs  read_all.rs  update.rs
infrastructure/src/web/handler/thought/: create.rs  delete.rs  find_by_id.rs  mod.rs  read.rs  read_all.rs  update.rs
infrastructure/web-server/: Cargo.toml
infrastructure/web-server/src/: lib.rs  route.rs  tests.rs  webapp.rs
infrastructure/web-server/src/handler/area_of_life/: create.rs  delete.rs  read_all.rs  update.rs
infrastructure/web-server/src/handler/thought/: create.rs  delete.rs  find_by_id.rs  read_all.rs  update.rs
src/: main.rs
webapp/: Cargo.toml  Trunk.toml  main.sass
webapp/src/: domain.rs  main.rs  usecase.rs
webapp/src/api/: http.rs  mod.rs
webapp/src/usecase/: area_of_life.rs  mod.rs  thought.rs
webapp/src/view/: mod.rs  new_area_of_life_dialog.rs
webapp/src/view/page/: home.rs  mod.rs
(+9 files in other folders)
