[package]
name = "clean-architecture-with-rust"
version = "0.0.0"
authors = ["Markus Kohlhase <markus.kohlhase@slowtec.de>"]
edition = "2021"
publish = false

[[bin]]
name = "clean-architecture-with-rust-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "clean-architecture-with-rust-web"
path = "src/bin/web.rs"

[workspace]
members = [
  "adapter",
  "adapter/json-boundary",
  "application",
  "domain",
  "infrastructure",
  "infrastructure/db",
  "infrastructure/web-server"
]
exclude = [ "webapp" ]

[dependencies]
cawr-infrastructure = "0.0.0"

[patch.crates-io]
cawr-adapter        = { path = "adapter"                   }
cawr-application    = { path = "application"               }
cawr-db             = { path = "infrastructure/db"         }
cawr-domain         = { path = "domain"                    }
cawr-infrastructure = { path = "infrastructure"            }
cawr-json-boundary  = { path = "adapter/json-boundary"     }
cawr-web-server     = { path = "infrastructure/web-server" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
