[package]
name = "clean-architecture-with-rust"
version = "0.0.0"
authors = ["Markus Kohlhase <markus.kohlhase@slowtec.de>"]
edition = "2021"
publish = false

[[bin]]
name = "clean-architecture-with-rust-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "clean-architecture-with-rust-web"
path = "src/bin/web.rs"

[workspace]
members = [
  "crates/adapter",
  "crates/application",
  "crates/db",
  "crates/domain",
  "crates/infrastructure",
  "crates/json-boundary",
  "crates/web-server"
]
exclude = [ "crates/webapp" ]

[dependencies]
cawr-infrastructure = "0.0.0"

[patch.crates-io]
cawr-adapter        = { path = "crates/adapter"        }
cawr-application    = { path = "crates/application"    }
cawr-db             = { path = "crates/db"             }
cawr-domain         = { path = "crates/domain"         }
cawr-infrastructure = { path = "crates/infrastructure" }
cawr-json-boundary  = { path = "crates/json-boundary"  }
cawr-web-server     = { path = "crates/web-server"     }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
