[package]
name = "clean-architecture-with-rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "clean-architecture-with-rust-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "clean-architecture-with-rust-web"
path = "src/bin/web.rs"

[[bin]]
name = "clean-architecture-with-rust-desktop"
path = "src/bin/desktop.rs"

[workspace]
members = [
  "crates/adapter",
  "crates/application",
  "crates/cli",
  "crates/db",
  "crates/desktop-egui",
  "crates/domain",
  "crates/infrastructure",
  "crates/json-boundary",
  "crates/web-app-api",
  "crates/web-server-warp"
]
exclude = [ "crates/web-app-seed" ]

[workspace.package]
authors = ["Markus Kohlhase <markus.kohlhase@slowtec.de>"]
version = "0.0.0"
edition = "2021"
rust-version = "1.79"

[dependencies]
cawr-infrastructure = "0.0.0"

[patch.crates-io]
cawr-adapter         = { path = "crates/adapter"         }
cawr-application     = { path = "crates/application"     }
cawr-cli             = { path = "crates/cli"             }
cawr-db              = { path = "crates/db"              }
cawr-desktop-egui    = { path = "crates/desktop-egui"    }
cawr-domain          = { path = "crates/domain"          }
cawr-infrastructure  = { path = "crates/infrastructure"  }
cawr-json-boundary   = { path = "crates/json-boundary"   }
cawr-web-app-api     = { path = "crates/web-app-api"     }
cawr-web-server-warp = { path = "crates/web-server-warp" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
