[package]
name = "adapter"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# Workspace dependencies
application = "0.0.0"
domain = "0.0.0"
json-boundary = { version = "0.0.0", features = ["conversions"] }

# External dependencies
http = "*"
http-serde = "*"
log = "*"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
