[package]
name = "infrastructure"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]

# Workspace dependencies
adapter = "0.0.0"
application = "0.0.0"
db = "0.0.0"

# External dependencies
log = "*"
mime_guess = "*"
pretty_env_logger = "*"
rust-embed = "*"
serde = { version = "1", features = ["derive"] }
structopt = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
warp = "*"

[dev-dependencies]
anyhow = "*"
hyper = "*"
serde_json = "1"
