[package]
name = "infrastructure"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]

# Workspace dependencies
adapter = "0.0.0"
application = "0.0.0"
db = "0.0.0"

# External dependencies
log = "*"
mime_guess = "*"
pretty_env_logger = "*"
rust-embed = "*"
serde = { version = "1", features = ["derive"] }
clap = { version = "3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "*"

[dev-dependencies]
anyhow = "*"
domain = "0.0.0"
hyper = "*"
serde_json = "1"
