[package]
name = "infrastructure"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]

# Workspace dependencies
adapter = "0.0.0"
db = "0.0.0"
web-server = "0.0.0"

# External dependencies
clap = { version = "3", features = ["derive"] }
directories = "4"
log = "*"
pretty_env_logger = "*"
tokio = { version = "1", features = ["full"] }
