[package]
name = "webapp"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
json-boundary = "*"
seed = { version = "*", features = ["serde-wasm-bindgen"] }
serde = "1"

[patch.crates-io]
json-boundary = { path = "../adapter/json-boundary" }

[profile.release]
lto = true
opt-level = 'z'
codegen-units= 1
