[package]
name = "webapp"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
json-boundary = "*"
seed = { version = "*", features = ["serde-wasm-bindgen"] }
serde = "1"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[patch.crates-io]
json-boundary = { path = "../adapter/json-boundary" }

[profile.release]
lto = true
opt-level = 'z'
codegen-units= 1

[dev-dependencies]
wasm-bindgen-test = "0.3"
