[package]
name = "json-boundary"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
application = { version = "0.0.0", optional = true }
serde = { version = "1", features =  ["derive"] }
serde_json = "1"
http = "*"
http-serde = "*"

[features]
default = []
conversions = ["application"]
