[package]
name = "cawr-adapter"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# Workspace dependencies
cawr-application = "0.0.0"
cawr-domain = "0.0.0"
cawr-json-boundary = "0.0.0"

# External dependencies
http = "*"
http-serde = "*"
log = "*"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
