[package]
name = "cawr-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Workspace dependencies
cawr-application = "=0.0.0"
cawr-domain = "=0.0.0"
cawr-json-boundary = "=0.0.0"

# External dependencies
http = "=0.2" # This is because warp still uses hyper v0.14
http-serde = "=1.1"  # This is because warp still uses hyper v0.14
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
