[package]
name = "cawr-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Workspace dependencies
cawr-application = "=0.0.0"
cawr-domain = "=0.0.0"
cawr-json-boundary = "=0.0.0"

# External dependencies
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
