[package]
name = "cawr-db"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]

# Workspace dependencies
cawr-adapter = "0.0.0"
cawr-application = "0.0.0"
cawr-domain = "0.0.0"

# External dependencies
log = "*"
jfs = "*"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
env_logger = "*"
tempdir = "*"
