[package]
name = "cawr-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]

# Workspace dependencies
cawr-adapter = "=0.0.0"
cawr-application = "=0.0.0"
cawr-domain = "=0.0.0"

# External dependencies
log = "0.4"
jfs = "0.9"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
env_logger = "0.11"
tempfile = "3.13"
