[package]
name = "cawr-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Workspace dependencies
cawr-adapter = "=0.0.0"

# External dependencies
anyhow = "1.0"
eframe = "0.27"
log = "0.4"
tokio = { version = "1.38", features = ["rt-multi-thread"] }
