[package]
name = "cawr-infrastructure"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]

# Workspace dependencies
cawr-adapter = "0.0.0"
cawr-cli = "0.0.0"
cawr-db = "0.0.0"
cawr-desktop = "0.0.0"
cawr-web-server = "0.0.0"

# External dependencies
clap = { version = "4", features = ["derive"] }
directories = "4"
log = "*"
pretty_env_logger = "*"
tokio = { version = "1", features = ["full"] }
