[package]
name = "cawr-infrastructure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]

# Workspace dependencies
cawr-adapter = "=0.0.0"
cawr-cli = "=0.0.0"
cawr-db = "=0.0.0"
cawr-desktop-egui = "=0.0.0"
cawr-web-server-warp = "=0.0.0"

# External dependencies
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.38", features = ["full"] }
