[package]
name = "cawr-web-app-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cawr-json-boundary = { version = "=0.0.0", path = "../json-boundary" }
serde = "1.0"
thiserror = "1.0"

[dependencies.gloo-net]
version = "0.6"
default-features = false
features = ["http", "json"]
