[package]
name = "cawr-web-app-kern"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cawr-json-boundary = "=0.0.0" 
cawr-web-app-api = "=0.0.0"
derive_more = { version = "1.0.0", features = ["from"] }
gloo-net = { version = "0.6.0", default-features = false }
