[package]
name = "web-app"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
cawr-json-boundary = "*"
cawr-web-app-api = "*"
gloo-console = "*"
gloo-net = { version = "*", default-features = false }
seed = "*"
serde = "1"

[dependencies.derive_more]
version = "*"
default-features = false
features = ["from"]

[patch.crates-io]
cawr-json-boundary = { path = "../json-boundary" }
cawr-web-app-api   = { path = "../web-app-api"   }

[profile.release]
lto = true
opt-level = 'z'
codegen-units= 1

[dev-dependencies]
wasm-bindgen-test = "0.3"
