[package]
name = "cawr-web-app-seed"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Workspace dependencies
cawr-json-boundary = "=0.0.0"
cawr-web-app-kern = "=0.0.0"

# External dependencies
log = "0.4"
seed = "0.10"
