[package]
name = "cawr-web-server"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]

# Workspace dependencies
cawr-adapter = "0.0.0"

# External dependencies
log = "*"
mime_guess = "*"
rust-embed = "*"
serde = { version = "1", features = ["derive"] }
warp = "*"

[dev-dependencies]

# Workspace dependencies
cawr-application = "0.0.0"
cawr-db = "0.0.0"
cawr-domain = "0.0.0"

# External dependencies
anyhow = "*"
hyper = "*"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
